        + Switch SOGo to 3.x from 2.x on Linux distributions. It relies on
          ports tree on BSD distributions.
        + Able to enable/disable sogo service for a single user with new SQL
          column `mailbox.enablesogo` and LDAP attribute/value
          `enabledService=sogo`.
        + Supports Postfix parameter `sender_dependent_relayhost_maps`.

    * Fixed issues:
        - Improper proxy timeout setting in SOGo and Nginx which cause SOGo
          error 'client disconnected during delivery of response'.
        - Not correctly add Postfix alias 'virusalert: root' for
          non-(Debian/Ubuntu) OSes.
        - Not create directory used to store php session files.
        - Not enable cron job to auto update SpamAssassin rules on RHEL/CentOS.

iRedMail-0.9.4:
    * New scripts:
        - tools/fail2ban_unban_ip.sh. Used to unban specified IP addresses
          from ALL fail2ban jails.

    * Fixed issues:
        - Not enable port 25 in OpenBSD PF rule.
        - Not detect IPv6 support on server.
        - Not correct set file permission of /etc/mail/mailer.conf on FreeBSD.
        - Not install port 'www/sogo-activesync' on FreeBSD.
        - Installation inside FreeBSD Jail:
            - Not correctly set MySQL/PostgreSQL/SOGo/Amavisd bind addresses.
            - Not updating Postfix `mynetworks=` to use specified local
              address.
              Thanks Peter2121 <peter _at_ flytrace.com> for the report in forum.
        - Use only 2 DNSBL services in postscreen service:
          zen.spamhaus.org, b.barracudacentral.org.
        - Cannot use specified MySQL root password on command line while
          installing with remote MySQL server.

    * Updated packages:
        + Roundcube webmail -> 1.1.4
        + iRedAPD -> 1.8.0
        + iRedAdmin -> 0.5
        + uwsgi -> 2.0.12 (OpenBSD only)

iRedMail-0.9.3:
    * Works on new distribution releases:
        - Ubuntu 15.10. [Note: old 15.04 is not supported.]